--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     please <strong>enable JS</strong> to make this app work.
   </noscript>
   <div id="root"></div>
+  
+  <!-- <script src="../dist/main.js"></script> -->
+
 </body>
 
 </html>
